Refactored the home page layout

--- a/scss/_crew.scss
+++ b/scss/_crew.scss
@@ -50,6 +50,7 @@
             font-weight: 400;
             font-size: 1.8rem;
             line-height: 32px;
+            text-align: justify;
             color: $color-secondary;
             margin-top: 1rem;
         }
