--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -3,31 +3,23 @@ header {
     width: 100vw;
     position: relative;
     display: flex;
-    background-color: $color-tetiary;
-    position: relative;
-
-
-    .header__wrap-left {
-        width: 30vw;
-        height: 100%;
-        // border: 1px solid black;
-        background: url(../images/Home-image1.png) no-repeat center center/cover;
-    }
-
-    .header__wrap-right {
-        width: 70vw;
-        height: 100%;
-        // border: 1px solid red;
-        background: url(../images/Home-image2.png) no-repeat center center/cover;
-    }
-
+    justify-content: center;
+    align-items: center;
+    background: url(../images/Home-image.jpg) no-repeat center center/cover;
    
 
+    .u-content__wrap {
+        justify-content: space-around;
+        align-items: center;
+    }
+
     .header_content {
-        position: absolute;
-        left: 15%;
-        bottom: 10%;
-        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        text-align: left;
+        height: 80%;
         width: 50%;
       
         h5 {
@@ -38,7 +30,6 @@ header {
             width: 44.4rem;
             font-size: 1.8rem;
             line-height: 3.2rem;
-            // word-spacing: 4.75;
             color: #d0d6f9;
             text-align: justify;
 
@@ -46,24 +37,24 @@ header {
     }
 
     .header__btn {
-        position: absolute;
-        bottom: 15%;
-        right: 15%;
-        text-align: center;  
+        width: 50%;
+        height: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
             
         
         
         .landing-btn:link,
         .landing-btn:visited {
             display: inline-block;
-            height: 26.4rem;
-            width: 26.4rem;
             color: rgba(11, 13, 23, 1);
-            font-size: 3.2rem;
+            font-size: 2.5vw;
             line-height: 3.667rem;
             letter-spacing: 0.2rem;
             text-decoration: none;
-            padding: 40% 23%;
+            text-align: center;
+            padding: 18% 11%;
             background-color: $color-primary;
             border-radius: 50%;
             position: relative;
