--- a/scss/_destination.scss
+++ b/scss/_destination.scss
@@ -1,6 +1,6 @@
 // STYLING FOR DESTINATION SECTION
 #destination {
-    height: fit-content;
+    height: 100vh;
     width: 100vw;
     
     color: $color-primary;
@@ -12,7 +12,7 @@
     
 
     .content__wrap-img {
-        width: 50%;
+        width: 40vw;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -31,8 +31,10 @@
         }
 
         .image {
-            height: 70.5%;
-            width: 95.807%;
+            // height: 70.5%;
+            height: 100%;
+            // width: 95.807%;
+            width: 100%;
             margin-top: 5rem;
             
         }
@@ -66,7 +68,7 @@
 
         nav {
 
-            margin-top: 20rem;
+            margin-top: 13rem;
 
             ul { 
                 list-style: none;
@@ -99,7 +101,7 @@
             line-height: 3.2rem;
             color: $color-secondary;
             text-align: justify;
-            border-bottom: 1px solid #777;
+            border-bottom: 1px solid  #383B4B;
             padding-bottom: 2.5rem;
         }
 
@@ -108,8 +110,8 @@
             display: flex;
             gap: 5rem;
             text-transform: uppercase;
-            font-style: normal;
             font-weight: 400;
+            width: 50vw;
 
             
             .foot-text-sm {
@@ -129,7 +131,105 @@
                 line-height: 3.2rem;
 
             }
+       }
+    
+       
+    }
+
+    @media (max-width: $laptop) {
+        #destination {
+
+            .content__wrap-text {
+
+                align-items: center;
+                padding: 3rem;
+
+                .content-para {
+                    text-align: center;
+                }
+                
+                .content__wrap-footer {
+
+                    gap: 2rem;
+                    text-align: center;
+                    justify-content: center;
+    
+                    .foot-text-sm {
+        
+                        font-size: 1rem;
+                        line-height: 1.2rem;
+                        letter-spacing: 0.23625rem;
+                        margin: 0.8rem 0.5rem;
+                    }
+        
+                    .foot-text-lg {
+        
+                        font-size: 1.8rem;
+                        line-height: 2.2rem;
+        
+                    }
+               } 
+
+            }
+
+            
+          
+    
+        }
+    }
+
+    @media (max-width: $tablet) {
+
+        #destination {
+
+            .container {
+                background: url(../images/Dest-tab-bg.jpg);
+            }
+        
+            .content__wrap-img {
+                height: 50%;
+                width: 100%;
+
+                .heading-5 {
+                    font-size: 2rem;
+                    line-height: 2.4rem;
+                    letter-spacing: 0.3375rem;
+                    align-self: flex-start;
+                    margin-top: 13rem;
+                    margin-left: 3rem;
+                }
+            }
+        
+            .content__wrap-text {
+                height: 50%;
+                width: 100%;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                nav {
+                    margin-top: 2rem;
+
+                    ul {
+                        a {
+                            font-size: 1.6rem;
+                        }
+                    }
+                }
+
+                .content-heading {
+                    font-size: 8rem;
+                    line-height: 9.1rem;
+                    
+                }
+
+                .content-para {
+                    font-size: 1.6rem;
+                    line-height: 2.8rem;
+                    text-align: center;
+                    font-family: 'Barlow';
+                    padding-bottom: 3.5rem;
+                }
+            }
         }
 
-
-}
+    }
