--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,6 +1,10 @@
 header {
     height: 100vh;
     width: 100vw;
+    // max-height: 90rem;
+    // max-width: 144rem;
+    // height: 90vh;
+    // width: 144vw;
     position: relative;
     display: flex;
     justify-content: center;
@@ -21,6 +25,8 @@ header {
         text-align: left;
         height: 80%;
         width: 50%;
+        gap: 2.4rem;
+        // border: 1px solid red;
       
         h5 {
             color: $color-secondary;
@@ -42,6 +48,7 @@ header {
         display: flex;
         justify-content: center;
         align-items: flex-end;
+        // border: 1px solid yellow;
             
         
         
@@ -85,4 +92,80 @@ header {
         }
     }
     
+}
+
+@media (max-width: $laptop) {
+
+    header {
+
+        .header__btn {
+            padding: 0 0 5rem 3rem;
+        }
+
+        .header_content {
+
+            padding-left: 2rem;
+
+            .heading-5 {
+                font-size: 2rem;
+                line-height: 2.4rem;
+                letter-spacing: 0.38rem;
+
+            }
+
+            .heading-1 {
+                line-height: 15rem;
+            }
+
+            p {
+                font-size: 1.6rem;
+                line-height: 2.8rem;
+                text-align: center;
+            }
+
+
+        }
+
+    }
+}
+
+@media (max-width: $tablet) {
+
+    
+    header {
+
+        background: url(../images/home-tab.jpg) no-repeat center center/cover;
+
+       
+
+        .u-content__wrap {
+            flex-direction: column;
+
+        }
+
+        .header_content {
+            height: 60%;
+            width: 100%;
+            justify-content: center;
+            padding-top: 7rem;
+            gap: 1rem;
+            text-align: center;
+        }
+
+        .header__btn {
+            height: 40%;
+            width: 100%;
+            align-items: center;
+            padding: 0;
+
+            .landing-btn:link,
+        .landing-btn:visited {
+            font-size: 3.2rem;
+            line-height: 3.7rem;
+            letter-spacing: 0.2rem;
+            padding: 14% 9%;
+        }
+        
+        }
+    }
 }
