--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -37,4 +37,12 @@
     // margin-top: 3rem;
     display: flex;
     // padding: 1.5rem 0;
+
+    @media (max-width: $tablet) {
+        & {
+            flex-direction: column;
+            width: 100%;
+            
+        }
+    }
 }
