--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,9 @@
 $color-primary: #ffffff;
 $color-secondary: #d0d6f9;
 $color-tetiary: #0b0d17;
+
+$mobile: 576px;
+$tablet: 768px;
+// $tablet: 950px;
+$laptop-m: 950px;
+$laptop: 992px;
