--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,13 +58,15 @@ h5, p, a {
 //THE NAVBAR STYLING FOR THE ENTIRE PROJECT
 .navbar {
     width: 100%;
-    height: 9.8rem;
+    // height: 9.8rem;
+    height: 10vh;
     position: fixed;
     top: 1.5rem;
     left: 0;
 
     display: flex;
     align-items: center ;
+    // border: 1px solid yellow;
 
     .logo {
         position: absolute;
@@ -80,9 +82,8 @@ h5, p, a {
 
     .line {
         height: 0.5px;
-        width: 33%;
+        min-width: 33vw;
         background-color: #ffffff;
-        position: absolute;
         position: absolute;
         left: 10.5%;
 
@@ -90,8 +91,9 @@ h5, p, a {
 
     .nav {
         width: 57%;
+        width: 57vw;
         position: absolute;
-        right: -0.5%;
+        right: 0;
         background-color: rgba(255, 255, 255, 0.04);
         backdrop-filter: blur(5px);
         opacity: 0.9;
@@ -113,7 +115,7 @@ h5, p, a {
                     line-height: 1.92rem;
                     letter-spacing: 0.2rem;
                     font-weight: 400;
-                    padding: 2rem;
+                    padding:  2rem;
                 }
 
                 span {
@@ -124,5 +126,66 @@ h5, p, a {
         }
 
 
+    }
+
+}
+
+@media (max-width: $laptop-m) {
+
+    .navbar {
+        .line {
+            width: 30vw;
+            // display: none;
+        }
+
+        nav {
+            width: 45vw;
+            
+            ol li a {
+                // font-size: 1.6rem;
+                // line-height: 1.6rem;
+                // padding:  2rem 1rem;
+
+                span {
+                    display: none;
+                }
+            }
+
+            
+
+            
+        }
+
+    }
+}
+@media (max-width: $tablet) {
+
+    .navbar {
+
+        top: 0;
+        z-index: 10;
+        
+        .line {
+            display: none;
+        }
+        
+        nav {
+            width: 45vw;
+            
+            ol li a {
+                font-size: 1.4rem;
+                line-height: 1.6rem;
+                letter-spacing: 0.2rem;
+                padding:  2rem 1rem;
+
+                span {
+                    display: none;
+                }
+            }
+
+            
+
+            
+        }
     }
 }
