--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,5 +5,5 @@ $color-tetiary: #0b0d17;
 $mobile: 576px;
 $tablet: 768px;
 // $tablet: 950px;
-$laptop-m: 950px;
+// $laptop-m: 950px;
 $laptop: 992px;
